--- a/design/variables.scss
+++ b/design/variables.scss
@@ -1,7 +1,7 @@
 
 $xl: "only screen and (min-width: 1200px)";
-$desktop: "only screen and (min-width: 992px) and (max-width: 1199px)";
-$desktoporbigger: "only screen and (min-width: 992px)";
-$tablet: "only screen and (min-width: 768px) and (max-width: 991px)";
-$mobile: "only screen and (max-width: 767px)";
+$desktop-and-bigger: "only screen and (min-width: 992px)";
+$desktop: "only screen and (max-width: 1199px)";
+$laptop: "only screen and (max-width: 991px)";
+$tablet: "only screen and (max-width: 767px)";
 $mobile-small: "only screen and (max-width: 400px)";
