changed contact buttons

--- a/design/variables.scss
+++ b/design/variables.scss
@@ -5,3 +5,5 @@ $desktop: "only screen and (max-width: 1199px)";
 $laptop: "only screen and (max-width: 991px)";
 $tablet: "only screen and (max-width: 767px)";
 $mobile-small: "only screen and (max-width: 400px)";
+
+$primary-color: #F9BC23;
